# meela-assignments

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/migrations/: 20250623080801_initial.sql
backend/src/: main.rs
backend/www/: index.html
frontend/: package-lock.json  package.json
frontend/app/: app.css
frontend/app/components/: questions.tsx
frontend/app/routes/: home.tsx
