[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
poem = { version = "3.1.11", features = ["static-files"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
